--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@tonconnect/ui-react": "^2.0.0-beta.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.0.8"
+    "styled-components": "^6.0.8",
+    "ton": "^13.6.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
