--- a/package.json
+++ b/package.json
@@ -10,17 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@orbs-network/ton-access": "^2.3.3",
+    "@tanstack/react-query": "^4.35.7",
     "@tonconnect/ui-react": "^2.0.0-beta.2",
     "add": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.11",
     "react-hook-form": "^7.47.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.11.0",
     "react-number-format": "^5.3.1",
     "react-router-dom": "^6.16.0",
     "styled-components": "^6.0.8",
     "ton": "^13.6.1",
     "ton-core": "^0.52.0",
-    "yarn": "^1.22.19"
+    "yarn": "^1.22.19",
+    "zustand": "^4.4.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
