--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^4.11.0",
     "react-number-format": "^5.3.1",
     "react-router-dom": "^6.16.0",
+    "react-tooltip": "^5.21.5",
     "styled-components": "^6.0.8",
     "ton": "^13.6.1",
     "ton-core": "^0.52.0",
