--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ton-community/func-js": "^0.6.2",
     "@tonconnect/ui-react": "^2.0.0-beta.2",
     "add": "^2.0.6",
+    "bignumber.js": "^9.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
