--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@ton-community/func-js": "^0.6.2",
     "@tonconnect/ui-react": "^2.0.0-beta.2",
     "add": "^2.0.6",
+    "antd": "^5.11.3",
     "bignumber.js": "^9.1.2",
     "react": "^18.2.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
     "react-hook-form": "^7.47.0",
@@ -34,6 +36,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
+    "@types/react-csv": "^1.1.9",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
