--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@tonconnect/ui-react": "^2.0.0-beta.2",
     "add": "^2.0.6",
     "antd": "^5.11.3",
+    "axios": "^1.6.2",
     "bignumber.js": "^9.1.2",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "react": "^18.2.0",
-    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
     "react-hook-form": "^7.47.0",
@@ -35,6 +37,8 @@
     "zustand": "^4.4.2"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
+    "@types/json2csv": "^5.0.7",
     "@types/react": "^18.2.15",
     "@types/react-csv": "^1.1.9",
     "@types/react-dom": "^18.2.7",
