--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,9 @@ jobs:
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18.x        
       - name: install dependencies
         run: yarn install
       - name: Build
